<resources>
    <string name="app_name">KalKal</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="informasi_bmr">Informasi BMR</string>
    <string name="bmr_desc">Tubuh memerlukan bahan bakar agar semua organ dapat melakukan fungsi dasarnya dengan baik, seperti bernapas, mencerna makanan, hingga memompa darah ke seluruh tubuh. BMR adalah kebutuhan kalori minimal yang dipakai organ-organ tubuh untuk melakukan tugas dasarnya. Ini meliputi pernapasan, sirkulasi, dan produksi sel. Prosesnya dikenal sebagai metabolisme. Dengan memenuhi BMR, tubuh dapat tumbuh dan berfungsi dengan baik.</string>
    <string name="bmr">Apa itu BMR?</string>
    <string name="main_title">Kalkulator Kalori</string>
    <string name="berat">Berat</string>
    <string name="kg">KG</string>
    <string name="tinggi">Tinggi</string>
    <string name="cm">CM</string>
    <string name="umur">Umur</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="bmr_desc1">Di dalam ranah gizi, kalori adalah sumber bahan bakar tubuh yang didapatkan dari mengonsumsi beragam makanan dan minuman. Kalori dari makanan dan minuman tersebut akan digunakan tubuh sebagai energi untuk melakukan segala aktivitas fisik. Hampir setiap bahan pangan dan makanan kemasan memiliki kalori. Anda bisa mengecek kandungan kalori dari suatu makanan olahan pada kemasannya. Menurut penelitian, kebutuhan kalori harian setiap orang akan berbeda tergantung dengan berat, tinggi badan, usia, aktivitas fisik, jenis kelamin, dan kondisi tubuh. Maka itu, penting untuk mengetahui berapa banyak kalori yang Anda butuhkan setiap hari agar tubuh tetap sehat, bugar, dan aktif. Jika kalori harian yang Anda dapatkan dari makanan tidak sesuai dengan kebutuhan kalori, Anda berisiko mengalami kekurangan gizi (jika kekurangan kalori) atau obesitas (jika berlebihan).</string>
    <string name="bmr1">Apa itu kalori dan fungsinya untuk tubuh?</string>
    <string name="saran">Saran</string>
    <string name="risiko">Risiko</string>
    <string name="kondisi">Kondisi</string>
    <string name="s_result">Tinggi</string>
    <string name="i_result">1000</string>
    <string name="n_kondisi">BMR normal berkisar dari -15% hingga 5%. Kebanyakan orang dengan hipertiroidisme (kelebihan hormon tiroid) memiliki BMR 20% atau lebih tinggi. Sedangkan orang dengan hipotiroidisme (kekurangan hormon tiroid) umumnya memiliki BMR 20% atau lebih rendah.</string>
    <string name="n_saran">Meskipun ada makanan tertentu, seperti kopi dan rempah-rempah, yang dapat meningkatkan angka metabolisme basal, perubahannya seringkali tidak terlalu mencolok. Selain itu, hasilnya hanya bertahan sebentar sehingga kurang berdampak pada penurunan berat badan. Namun, aktivitas pembentukan otot bisa sedikit membantu.Hal ini dikarenakan salah satu variabel yang memengaruhi BMR atau RMR Anda (tingkat metabolisme istirahat) berdampak pada jumlah otot tanpa lemak yang Anda miliki. Di angka berat badan tertentu, semakin banyak otot dan semakin sedikit lemak dimiliki menunjukkan semakin tinggi tingkat metabolisme seseorang. Pasalnya, otot cenderung menggunakan lebih banyak energi daripada lemak saat tubuh sedang istirahat. Logikanya, jika Anda dapat membentuk otot sekaligus mengurangi lemak tubuh, Anda akan memiliki tingkat metabolisme istirahat yang lebih tinggi sehingga tubuh dapat membakar lemak dengan cepat dan efisien.</string>
    <string name="n_risiko">Orang dengan BMR normal mungkin ingin meningkatkan Basal Metabolic Rate (BMR) atau Resting Metabolic Rate (RMR). Khususnya, jika ingin menurunkan berat badan dan meningkatkan tingkat energi. Meskipun tidak menimbulkan risiko kesehatan seperti BMR rendah, tetaplah berkonsultasi dengan dokter untuk memeriksa kondisi kesehatan Anda saat ini, dengan mempertimbangkan faktor gaya hidup yang dapat berpengaruh pada risiko kesehatan Anda di masa mendatang, seperti diabetes tipe 2 dan obesitas.</string>
    <string name="t_kondisi">BMR tinggi menunjukkan bahwa Anda perlu membakar lebih banyak kalori untuk menunjang aktivitas sehari-hari. Orang dengan BMR tinggi memiliki lebih banyak otot dan lebih sedikit lemak, terlepas dari berat badannya saat ini. Hal ini dikarenakan otot cenderung menggunakan lebih banyak energi saat istirahat dibandingkan lemak.</string>
    <string name="t_saran">Untuk mempertahankan Basal Metabolic Rate (BMR) yang tinggi, tetaplah aktif beraktivitas dan jalani gaya hidup sehat. Mulailah dengan mengonsumsi makanan bergizi dan seimbang (makan protein tanpa lemak, sayuran, dan buah). Pilih dan lakukan jenis olahraga yang tepat, yang dapat membakar lemak dan membangun otot. Selalu ingat bahwa semakin tinggi BMR menunjukkan bahwa Anda harus membakar lebih banyak kalori untuk mempertahankan fungsi tubuh Anda dengan benar sepanjang hari. Hal ini pun sangat penting bagi kesehatan Anda secara keseluruhan.</string>
    <string name="t_risiko">Penyebab patologis umum dari BMR tinggi adalah demam atau kenaikan suhu tubuh yang meningkatkan fungsi metabolisme tubuh. Para ahli memperkirakan adanya peningkatan 7% dari setiap derajat Fahrenheit peningkatan suhu tubuh. Penyakit tiroid juga sangat mempengaruhi BMR. Hal ini dikarenakan hormon tiroid bertanggung jawab untuk mengatur laju - metabolisme sel. BMR yang tinggi biasanya disebabkan oleh hipertiroidisme (kelebihan hormon tiroid). Sedangkan hipotiroidisme (kekurangan hormon tiroid) sering kali membuat BMR menjadi rendah.</string>
    <string name="r_kondisi">BMR rendah menunjukkan angka BMR yang lebih kecil dari angka normal, biasanya kurang dari 1.500 kkal per hari. BMR rendah berarti Anda menggunakan lebih sedikit energi untuk beraktivitas dibandingkan dengan orang normal. Hal ini dapat menyebabkan nafsu makan Anda berkurang. Dalam artian, saat makan, Anda membutuhkan porsi lebih sedikit dari orang normal untuk menambah berat badan (karena Anda lebih mudah mencapai surplus energi).</string>
    <string name="r_saran">Angka metabolisme basal yang rendah merupakan faktor risiko dari resistensi insulin dan diabetes tipe 2. Hal ini dapat disebabkan oleh ketidakseimbangan hormon, seperti rendahnya hormon tiroid akibat tidak mendapatkan cukup kalori dalam jangka waktu yang lama. Akibatnya, tubuh akan beradaptasi dengan kondisi tersebut. Jika Anda tidak memberi tubuh cukup kalori untuk beraktivitas, tubuh akan melakukan penyesuaian dengan menghabiskan energi tubuh yang tersisa. Setelahnya, tubuh akan mengurangi penggunaan energi Anda untuk bertahan hidup.</string>
    <string name="r_risiko">Anda membutuhkan 2.520 kkal per hari. Dengan melakukan aktivitas ringan, tubuh membutuhkan 2.520 kkal setiap harinya untuk mempertahankan berat badan Anda saat ini.</string>
    <string name="kelompok">Kelompok\nSenna Annaba Ahmad\nWaldo Felix</string>
</resources>